ums/0.2.UserManagementServiceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: ums
  labels:
    app: ums   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ums
  template:
    metadata:
      labels:
        app: ums
        aadpodidbinding: azure-kv    
    spec:      
      containers:
        - name: ums          
          image: hwpacrwestus.azurecr.io/staging/user.management:9fd3c3b8ea51b5f1d0bc8a368259f32c884b013d
          resources:
            limits:
              cpu: "2"
              memory: 1024Mi
            requests:
              cpu: 200m
              memory: 128Mi
          ports:
          - containerPort: 80
          volumeMounts:
          - name: appsettings
            mountPath: "/mnt/appsettings"
            readOnly: true    
      volumes:
        - name: appsettings
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-kvname
