ums/0.0.UserManagementServiceSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ums-service
spec:
  selector:
    app: ums
    version: v1
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
