ums/0.4.UserManagementVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ums
spec:
  hosts:
  - "*"
  gateways:
  - ums-gateway
  http:
  - match:
    - uri:
        prefix: /    
    route:
    - destination:
        host: ums-service.default.svc.cluster.local
        port:
          number: 8080
